<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/signup_fragment_margin_top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_send_notif_title"
            android:id="@+id/edtTitle"
            app:iconLeft="@drawable/ic_mail_white_24dp"
            app:baseColor="@color/gray_hot"
            app:iconPadding="0dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_send_notif_message"
            android:id="@+id/edtMessage"
            app:iconLeft="@drawable/ic_create_white_24dp"
            app:baseColor="@color/gray_hot"
            app:iconPadding="0dp" />


    </LinearLayout>

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/btSendNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/hint_send_bt_notif_message"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/button_text_size" />

</RelativeLayout>
