<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.gc.materialdesign.views.LayoutRipple
            android:layout_width="fill_parent"
            android:layout_height="@dimen/reachus_fragment_section_height"
            android:background="@color/white"
            android:id="@+id/lrWebsite"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/reachus_fragment_section_image_size"
                android:layout_height="@dimen/reachus_fragment_section_image_size"
                android:layout_centerVertical="true"
                android:id="@+id/ivWebsite"
                android:layout_marginLeft="@dimen/reachus_fragment_section_image_margin_left"
                android:src="@drawable/ic_language_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWebsite"
                android:text="@string/reachus_website"
                android:textSize="@dimen/reachus_fragment_section_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/reachus_fragment_section_text_margin_left" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:layout_width="fill_parent"
            android:layout_height="@dimen/reachus_fragment_section_height"
            android:background="@color/white"
            android:id="@+id/lrFacebook"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/reachus_fragment_section_image_size"
                android:layout_height="@dimen/reachus_fragment_section_image_size"
                android:layout_centerVertical="true"
                android:id="@+id/ivFacebook"
                android:layout_marginLeft="@dimen/reachus_fragment_section_image_margin_left"
                android:src="@drawable/ic_share_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvFacebook"
                android:text="@string/reachus_facebook"
                android:textSize="@dimen/reachus_fragment_section_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/reachus_fragment_section_text_margin_left" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:layout_width="fill_parent"
            android:layout_height="@dimen/reachus_fragment_section_height"
            android:background="@color/white"
            android:id="@+id/lrEmail"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/reachus_fragment_section_image_size"
                android:layout_height="@dimen/reachus_fragment_section_image_size"
                android:layout_centerVertical="true"
                android:id="@+id/ivEmail"
                android:layout_marginLeft="@dimen/reachus_fragment_section_image_margin_left"
                android:src="@drawable/ic_mail_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmail"
                android:text="@string/reachus_email"
                android:textSize="@dimen/reachus_fragment_section_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/reachus_fragment_section_text_margin_left" />
        </com.gc.materialdesign.views.LayoutRipple>

        <com.gc.materialdesign.views.LayoutRipple
            android:layout_width="fill_parent"
            android:layout_height="@dimen/reachus_fragment_section_height"
            android:background="@color/white"
            android:id="@+id/lrPhone"
            android:clickable="true">

            <ImageView
                android:layout_width="@dimen/reachus_fragment_section_image_size"
                android:layout_height="@dimen/reachus_fragment_section_image_size"
                android:layout_centerVertical="true"
                android:id="@+id/ivPhone"
                android:layout_marginLeft="@dimen/reachus_fragment_section_image_margin_left"
                android:src="@drawable/ic_phone_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPhone"
                android:text="@string/reachus_phone"
                android:textSize="@dimen/reachus_fragment_section_text_size"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/reachus_fragment_section_text_margin_left" />
        </com.gc.materialdesign.views.LayoutRipple>


    </LinearLayout>


</ScrollView>
